--- a/setup_ollama.yml
+++ b/setup_ollama.yml
@@ -6,6 +6,43 @@
     - name: Install Ollama
       shell: curl -fsSL https://ollama.com/install.sh | sh
 
+    - name: Stop ollama service
+      systemd:
+        name: ollama
+        state: stopped
+
+    - name: Create systemd service file for Ollama
+      copy:
+        dest: /etc/systemd/system/ollama.service
+        content: |
+          [Unit]
+          Description=Ollama Service
+          After=network-online.target
+
+          [Service]
+          ExecStart=/usr/local/bin/ollama serve
+          User=ollama
+          Group=ollama
+          Restart=always
+          RestartSec=3
+          Environment="OLLAMA_KEEP_ALIVE=60m"
+          Environment="OLLAMA_NUM_PARALLEL=2"
+          Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin"
+
+          [Install]
+          WantedBy=default.target
+        mode: '0644'
+
+    - name: Reload systemd daemon
+      systemd:
+        daemon_reload: yes
+
+    - name: Start ollama service
+      systemd:
+        name: ollama
+        state: started
+        enabled: yes
+
     - name: Pull the model
       command: ollama pull qwen2.5-coder:32b-instruct-fp16
 
